--- a/school-group-registration.html
+++ b/school-group-registration.html
@@ -1,16 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -22,17 +30,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Register your school for a complimentary group visit to the Qatar Education Expo 2026. An unmissable opportunity for students to explore top international universities and future career paths.">
     <title>School Group Registration | Qatar Education Fair 2026</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/school-group-registration-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/school-group-registration.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/school-group-registration.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/school-group-registration.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,21 +46,9 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "School Group Registration | Qatar Education Fair 2026",
+        "url": "https://eduexpoqatar.com/school-group-registration.html"
       },
       {
         "@context": "https://schema.org",
@@ -66,12 +57,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "Visit",
-          "item": "/why-attend.html"
+          "item": "https://eduexpoqatar.com/why-attend.html"
         },{
           "@type": "ListItem",
           "position": 3,
@@ -82,10 +73,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden" title="Google Tag Manager"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -134,6 +129,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="school-group-registration-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
+                </div>
             </div>
         </div>
     </header>
@@ -149,7 +147,7 @@
         <section id="school-group-registration-form-section" class="bg-surface">
             <div class="container" style="max-width: 800px;">
                 <h2>Register Your School Group</h2>
-                <p class="subtitle">Provide details below to arrange a complimentary group visit for your students. Our team will contact you to confirm your visit schedule.</p>
+                <p class="subtitle">Provide the details below to arrange a complimentary group visit for your students. Our team will contact you to confirm your visit schedule.</p>
                 
                 <div id="school-group-form-success" style="display: none; background: var(--white); padding: 2.5rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center;">
                      <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
@@ -169,7 +167,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-school-contact-name">Contact Person Name (Teacher/Counselor) *</label>
+                            <label for="form-school-contact-name">Contact Person (Teacher/Counselor) *</label>
                             <input type="text" id="form-school-contact-name" name="contact_name" required>
                             <div class="error-message"></div>
                         </div>
@@ -199,7 +197,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-school-student-count">Approx. Number of Students *</label>
+                            <label for="form-school-student-count">Approximate Number of Students *</label>
                             <input type="number" id="form-school-student-count" name="student_count" required min="1">
                             <div class="error-message"></div>
                         </div>
@@ -243,11 +241,13 @@
         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot guiding school groups to the registration form." class="school-group-reg-mascot">
     </main>
 
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -258,6 +258,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -296,76 +297,6 @@
             </div>
         </div>
     </footer>
-
-    <!-- WhatsApp Chat -->
-    <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <!-- Exit Intent Modal -->
-    <div id="exit-intent-modal" class="modal-overlay">
-        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
-            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
-            <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
-        </div>
-    </div>
-
-    <!-- Deck Request Modal -->
-    <div id="deck-request-modal" class="modal-overlay">
-        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <div id="deck-form-container">
-                <h3 id="deck-modal-title">Get The Official Deck</h3>
-                <p>Please provide your details to receive the Exhibitor & Sponsorship Deck instantly.</p>
-                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
-                    <input type="hidden" name="form_source" value="Deck Request Popup">
-                    <div class="form-group">
-                        <label for="deck-form-name">Full Name *</label>
-                        <input type="text" id="deck-form-name" name="name" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="deck-form-email">Work Email *</label>
-                        <input type="email" id="deck-form-email" name="email" required>
-                        <div class="error-message"></div>
-                    </div>
-                     <div class="form-group">
-                        <label for="deck-form-phone">Mobile Number *</label>
-                        <input type="tel" id="deck-form-phone" name="phone" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="deck-form-designation">Designation *</label>
-                            <input type="text" id="deck-form-designation" name="designation" required>
-                            <div class="error-message"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="deck-form-organization">Organization *</label>
-                            <input type="text" id="deck-form-organization" name="organization" required>
-                            <div class="error-message"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
-                </form>
-            </div>
-            <div id="deck-form-success" style="display: none; text-align: center;">
-                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
-                <h3>Thank You!</h3>
-                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
-            </div>
-        </div>
-    </div>
-    
-    <!-- Mobile Sticky Bar -->
-    <div id="mobile-sticky-bar">
-        <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
-        <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
-        <a href="student-registration.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>Student</span></a>
-        <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
-    </div>
 
     <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
     <script type="module" src="index.tsx"></script>
