--- a/speaker-registration.html
+++ b/speaker-registration.html
@@ -1,16 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -46,21 +54,9 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "Apply to Speak | Qatar Education Conference 2026 Speaker Registration",
+        "url": "https://eduexpoqatar.com/speaker-registration.html"
       },
       {
         "@context": "https://schema.org",
@@ -69,7 +65,7 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
@@ -80,10 +76,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -132,6 +132,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="speaker-registration-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
+                </div>
             </div>
         </div>
     </header>
@@ -310,11 +313,13 @@
         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot on a podium, encouraging experts to apply as speakers." class="speaker-reg-mascot">
     </main>
 
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -364,6 +369,19 @@
             </div>
         </div>
     </footer>
+
+    <!-- WhatsApp Chat -->
+    <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    
+    <!-- Mobile Sticky Bar -->
+    <div id="mobile-sticky-bar">
+        <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
+        <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
+        <a href="student-registration.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>Student</span></a>
+        <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
+    </div>
 
     <script type="module" src="index.tsx"></script>
 </body>
