--- a/sponsorship-tiers.html
+++ b/sponsorship-tiers.html
@@ -1,16 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('consent', 'default', {
+      'analytics_storage': 'denied',
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'wait_for_update': 500
+    });
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -22,17 +30,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sponsor the global education expo in Qatar and connect with a massive audience. Explore sponsorship opportunities for the leading education conference in the region.">
     <title>Sponsorship Tiers | Sponsor Qatar Education Expo 2026</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
+    <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/sponsorship-tiers-ar.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
-    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
     <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/sponsorship-tiers.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,49 +46,74 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
-      },
-      {
-        "@context": "https://schema.org",
         "@type": "BreadcrumbList",
         "itemListElement": [{
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "/index.html"
+          "item": "https://eduexpoqatar.com/index.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "For Sponsors",
-          "item": "/sponsorship-tiers.html"
+          "item": "https://eduexpoqatar.com/sponsorship-tiers.html"
         },{
           "@type": "ListItem",
           "position": 3,
           "name": "Sponsorship Tiers"
         }]
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Platinum Partner",
+        "description": "The Platinum Partnership offers category exclusivity and unmatched visibility, including a 21 sqm premium stand, a 30-minute keynote session, exclusive 1:1 meetings, logo on all materials, dedicated café branding, and year-round marketing.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/sponsorship-registration.html",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Gold Partner",
+        "description": "High-impact visibility package including an 18 sqm booth, a 20-minute speaking slot, feature article in the digital preview, social media spotlight, and logo placement on key event materials.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/sponsorship-registration.html",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Start-Up Sponsor",
+        "description": "Sponsorship package to champion emerging education start-ups, including logo branding across the Start-Up Pavilion, a 20-minute speaking slot on the Start-Up Stage, and inclusion in Pavilion marketing.",
+        "brand": { "@type": "Organization", "name": "Qatar Education Expo 2026" },
+        "offers": {
+          "@type": "Offer",
+          "url": "https://eduexpoqatar.com/sponsorship-registration.html",
+          "priceCurrency": "QAR",
+          "availability": "https://schema.org/InStock"
+        }
       }
     ]
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -134,6 +162,9 @@
             <div class="header-ctas">
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
+                <div class="lang-switcher">
+                    <a href="sponsorship-tiers-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
+                </div>
             </div>
         </div>
     </header>
@@ -234,7 +265,8 @@
                         </div>
                     </div>
                     <!-- Start-Up Sponsor Card -->
-                    <div class="tier-card startup">
+                    <div class="tier-card startup startup-card-with-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762148595/Untitled_design_-_2025-11-03T111231.113_eejcdu.webp" alt="Qatar Education Expo's owl mascot wearing a graduation cap, representing the start-up sponsorship and innovation." class="tier-mascot">
                         <div class="tier-header">
                             <h3>Start-Up Sponsor</h3>
                             <p class="tier-subtitle">Champion the Next Generation of Innovation</p>
@@ -295,38 +327,38 @@
                  <h2>Sponsor FAQ</h2>
                  <div class="faq-accordion">
                     <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-1" id="faq-q-1">
                             <span>Can sponsorship packages be customized?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div class="faq-answer" id="faq-answer-1" role="region" aria-labelledby="faq-q-1">
                             <p>Absolutely. While our tiers offer the best value, we are happy to create a bespoke package that aligns perfectly with your marketing objectives and budget. Please contact our partnership team to discuss your goals.</p>
                         </div>
                     </div>
                     <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-2" id="faq-q-2">
                             <span>What is the expected ROI for sponsors?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div class="faq-answer" id="faq-answer-2" role="region" aria-labelledby="faq-q-2">
                             <p>ROI is measured through direct lead generation via our lead capture system, extensive brand visibility (1M+ impressions), high-level networking opportunities, and positioning your brand as a thought leader in the booming MENA education market.</p>
                         </div>
                     </div>
                      <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-3" id="faq-q-3">
                             <span>How does lead capture work for sponsors?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div class="faq-answer" id="faq-answer-3" role="region" aria-labelledby="faq-q-3">
                             <p>Sponsors receive dedicated lead capture devices. Simply scan an attendee's badge (with their consent) to instantly receive their contact and demographic information for seamless post-event follow-up. It's fast, efficient, and GDPR compliant.</p>
                         </div>
                     </div>
                     <div class="faq-item">
-                        <button class="faq-question" aria-expanded="false">
+                        <button class="faq-question" aria-expanded="false" aria-controls="faq-answer-4" id="faq-q-4">
                             <span>Are there deadlines for sponsorship commitment?</span>
                             <i class="fas fa-plus"></i>
                         </button>
-                        <div class="faq-answer">
+                        <div class="faq-answer" id="faq-answer-4" role="region" aria-labelledby="faq-q-4">
                             <p>Yes, to ensure inclusion in all pre-event marketing materials, we recommend confirming your sponsorship at least 3-4 months prior to the event. High-demand exclusive opportunities like Platinum and A La Carte sponsorships are sold on a first-come, first-served basis.</p>
                         </div>
                     </div>
@@ -347,11 +379,13 @@
         </section>
     </main>
     
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -362,6 +396,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
